feat: 修正了事务组名称和事务回退逻辑